# dados-do-iftm

./: CalcularQuantidadeDeValor.py  Link  TarefaDeInglês.docx  TrabalhoFinal.docx
Arquivo/: Documents.7z  Exercicio 1.7z  Exercicio 2.7z
Arquivo/Funcoes/: CMakeLists.txt  Exercicio1_lerMediaDasTresNotaPonderada.cpp  Exercicio2_reescreverOExercicioAnteriorDaMediaPonderada.cpp  Exercicio3_LerORaioDaCircuferenciaEAreaDoRaio.cpp  Exercicio4_ReescreverOExercicioAnterior.cpp  Exercicio5_CalcularQuantidadeDeAnoEMeseEDia.cpp  Exercicio6_RefazerOExercicio5_LerQuantidadeDeAnos.cpp  Exercicio7_LerQuantidadeDeHoraEMinutoESegundo  Exercicio7_LerQuantidadeDeHoraEMinutoESegundo.cpp  Exercicio8_RefazerOcodigoDoExercicioAnterior  Exercicio8_RefazerOcodigoDoExercicioAnterior.cpp  Exercicio9_LerDuracaoDeSegundo  Exercicio9_LerDuracaoDeSegundo.cpp  LerORaioDaCircuferenciaEAreaDoRaio  reescreverOExercicioAnteriorDaMediaPonderada
Final assignment cenid basic - Documentos Google_arquivos/: 2.html  2097858598-client_js_prod_kix_core__pt_br.js  3883107863-KixCss_ltr.css  RotateCookiesPage.html  cb=gapi.loaded_2  edit.html  rs=AA2YrTu0yU9RTMfNNC-LVUmaaNKwIO136g.js
HTML/: Ricardo_criou_o_programa.html  fundamento_da_programação.html  futebol.html  idade_para_dirigir.html  imc.html  imc_de_uma_pessoa.html  jogo_da_adivinha.html  jogo_da_adivinhação.html  laço.html  lista.html  mais_um_teste.html  media_dos_eventos.html  media_idades_familiares.html  minha_idade.html  moeda_destino.html  (+38 more)
HTML.py 3/: CalcularConsumoDeGasolina.html  ExemploDeConcatenaçõesD.html  Programa.html  Programa4.html
(+75 files in other folders)
