cmake_minimum_required(VERSION 3.26)
project(Funcoes)

set(CMAKE_CXX_STANDARD 17)

add_executable(Funcoes main.cpp
        Exercicio2_reescreverOExercicioAnteriorDaMediaPonderada.cpp
        Exercicio3_LerORaioDaCircuferenciaEAreaDoRaio.cpp
        Exercicio4_ReescreverOExercicioAnterior.cpp
        Exercicio5_CalcularQuantidadeDeAnoEMeseEDia.cpp
        Exercicio5_CalcularQuantidadeDeAnoEMeseEDia.cpp
        Exercicio9_LerDuracaoDeSegundo.cpp)
